@@ -40,7 +40,7 @@
    "source": [
     "reducer = BatchReducer(BATCH_FILE,\n",
     "                       data_folder=DATA_FOLDER,\n",
-    "                       rebin_percent=REBIN_PERCENT)"
+    "                       reduction_options={\"rebin_percent\":REBIN_PERCENT)"
    ]
   },
   {
@@ -88,6 +88,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
